--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-paper": "^5.14.5",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "^13.16.0"
   },
